--- a/app/src/main/res/layout/dialog_open_note.xml
+++ b/app/src/main/res/layout/dialog_open_note.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:itemCount="10"
+            android:paddingBottom="@dimen/open_note_popup_bottom_extra_padding"
             tools:listitem="@layout/open_note_item" />
 
     </androidx.core.widget.NestedScrollView>
