--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="grid_note_item_max_height">300dp</dimen>
     <dimen name="max_open_note_popup_height">500dp</dimen>
     <dimen name="min_open_note_popup_height">200dp</dimen>
+    <dimen name="open_note_popup_bottom_extra_padding">76dp</dimen>
 </resources>
